--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ test:
   script:
   # Install Python packages required to run code. Add any additional
   # packages your code needs require here.
-  - pip install dateutils flake8 matplotlib numpy pytest requests
+  - pip install dateutils flake8 matplotlib numpy pytest requests haversine python-dateutil
 
   # flake8 static code and style testing. Enable for extra testing.
   # - python -m flake8 .
@@ -14,6 +14,12 @@ test:
 
   # Run deliverables. Add your deliverables to the test system here.
   - python Task1A.py
+  - python Task1B.py
+  - python Task1C.py
+  - python Task1D.py
+  - python Task1E.py
+  - python Task1F.py
+
 
   - python Task2A.py
   - python Task2D.py
