--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ test:
   script:
   # Install Python packages required to run code. Add any additional
   # packages your code needs require here.
-  - pip install dateutils flake8 matplotlib numpy pytest requests haversine python-dateutil
+  - pip install dateutils flake8 matplotlib numpy pytest requests haversine python-dateutil sympy
 
   # flake8 static code and style testing. Enable for extra testing.
   # - python -m flake8 .
